Trying to fix images on mobile

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -272,6 +272,20 @@ a:hover {
     right: 0;
 }
 
+.left-img-phone {
+    position: absolute;
+    top: 50px;
+    display: none;
+    width: 150px;
+}
+
+.right-img-phone {
+    position: absolute;
+    display: none;
+    top: 50px;
+    width: 150px;
+}
+
 @keyframes levitate {
     0% {
         transform: translateY(0);
@@ -308,27 +322,25 @@ a:hover {
     }
 }
 
-@media only screen and (max-width: 768px) {
-    .left-img img, .right-img img {
-        width: 80%;
-        max-width: 300px;
-        margin: 0 auto;
-    }
-
-    .left-img, .right-img {
-        position: relative;
-        transform: none;
-        opacity: 1;
-    }
-}
-
 @media only screen and (max-width: 1620px) {
-    .left-img, .right-img {
-        display: block;
+    .left-img-phone,
+    .right-img-phone {
         position: static;
-        transform: none;
-        margin: 20px auto;
-        opacity: 1;
+        display: block;
+        margin: 40px auto;
+        width: 80%;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        border: 5px solid #cc2f2f;
+    }
+    .left-img, .right-img {
+        display: none;
+    }
+    .left-img-phone {
+        transform: rotate(-5deg);
+    }
+    .right-img-phone {
+        transform: rotate(3deg);
     }
 }
 
